rdr/file-browser/base/fb-deployment-server.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
    app.openshift.io/route-disabled: 'false'
  name: filebrowser
  labels:
    app: filebrowser
    app.kubernetes.io/component: filebrowser
    app.kubernetes.io/instance: filebrowser
    app.kubernetes.io/name: filebrowser
    app.openshift.io/runtime: go
    workloadpattern: filebrowser_io
spec:
  replicas: 1
  selector:
    matchLabels:
      app: filebrowser
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: filebrowser
        deployment: filebrowser
    spec:
      containers:
        - name: filebrowser
          image: 'quay.io/ocsci/filebrowser:latest'
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          volumeMounts:
            - name: mypvc
              mountPath: /srv
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
      volumes:
        - name: mypvc
          persistentVolumeClaim:
            claimName: filebrowser-pvc-1
            readOnly: false
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
