rdr/file-browser/base/fb-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: filebrowser
  labels:
    app: filebrowser
    app.kubernetes.io/component: filebrowser
    app.kubernetes.io/instance: filebrowser
    app.kubernetes.io/name: filebrowser
    app.openshift.io/runtime-version: latest
    argocd.argoproj.io/instance: filebrowser
    workloadpattern: filebrowser_io
  annotations:
    haproxy.router.openshift.io/balance: roundrobin
    haproxy.router.openshift.io/disable_cookies: 'true'
spec:
  to:
    kind: Service
    name: filebrowser
    weight: 100
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
  wildcardPolicy: None
